RESOLVED FIXED197626
Terminate service workers that use too much CPU / power
https://bugs.webkit.org/show_bug.cgi?id=197626
Summary Terminate service workers that use too much CPU / power
Chris Dumez
Reported 2019-05-06 13:45:24 PDT
Terminate service workers that use too much CPU / power, similarly to what we do for background WebContent processes.
Attachments
Patch (5.60 KB, patch)
2019-05-06 13:47 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-05-06 13:45:43 PDT
Chris Dumez
Comment 2 2019-05-06 13:47:43 PDT
Geoffrey Garen
Comment 3 2019-05-06 13:51:59 PDT
Comment on attachment 369166 [details] Patch r=me
WebKit Commit Bot
Comment 4 2019-05-06 14:44:07 PDT
Comment on attachment 369166 [details] Patch Clearing flags on attachment: 369166 Committed r244979: <https://trac.webkit.org/changeset/244979>
WebKit Commit Bot
Comment 5 2019-05-06 14:44:09 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.