Terminate service workers that use too much CPU / power https://bugs.webkit.org/show_bug.cgi?id=197626 <rdar://problem/50374707>

Reviewed by Geoffrey Garen.

Terminate service worker processes that use over 50% CPU on average over the last 8 minutes,
similarly to what we do for background WebContent processes.

* UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::didExceedCPULimit):
* WebProcess/WebProcess.cpp:
(WebKit::WebProcess::initializeProcess):
* WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::WebProcess::updateCPULimit):
(WebKit::WebProcess::updateCPUMonitorState):


Canonical link: https://commits.webkit.org/211764@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244979 268f45cc-cd09-0410-ab3c-d52691b4dbfc